--- a/simple-pipeline/Jenkinsfile
+++ b/simple-pipeline/Jenkinsfile
@@ -1,11 +1,12 @@
 pipeline {
+
     options {
         // set a timeout of 30 minutes for this pipeline
         timeout(time: 30, unit: 'MINUTES')
     }
     agent {
       node {
-        // TODO: run this simple pipeline on jenkins 'master' node
+        label 'master'
       }
     }
 
@@ -22,6 +23,21 @@ pipeline {
                 }
             }
         }
+
+        stage('stage 2') {
+         steps {
+            sh 'echo hello from stage 2!'
+            }
+          }
+
+
+        stage('manual approval') {
+steps {
+timeout(time: 60, unit: 'MINUTES') {
+input message: "Move to stage 3?"
+}
+}
+}
 
         // TODO: ADD A STAGE THAT SAYS HELLO
 
